src/test/deca/context/invalid/created/appel_meth/met_indef.deca
// Description :
//   	appel d'une methode indefinie dans la classe
// Resultats :
//		Erreur contextuelle
//    	Ligne  :
class A {
}
{
A a = new A();
a.met();
}